; ModuleID = '/home/carl/AnghaBench/postgres/src/fe_utils/extr_print.c_restore_sigpipe_trap.c'
source_filename = "/home/carl/AnghaBench/postgres/src/fe_utils/extr_print.c_restore_sigpipe_trap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIGPIPE = common dso_local global i32 0, align 4
@always_ignore_sigpipe = common dso_local global i64 0, align 8
@SIG_IGN = common dso_local global i32 0, align 4
@SIG_DFL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @restore_sigpipe_trap() #0 {
  %1 = load i32, i32* @SIGPIPE, align 4
  %2 = load i64, i64* @always_ignore_sigpipe, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load i32, i32* @SIG_IGN, align 4
  br label %8

6:                                                ; preds = %0
  %7 = load i32, i32* @SIG_DFL, align 4
  br label %8

8:                                                ; preds = %6, %4
  %9 = phi i32 [ %5, %4 ], [ %7, %6 ]
  %10 = call i32 @pqsignal(i32 %1, i32 %9)
  ret void
}

declare dso_local i32 @pqsignal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
